force-app/main/default/objects/Project1__c/Project1__c.object-meta.xml
<CustomObject>
    <description>Project list</description>
    <label>Project1</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>