force-app/main/default/objects/Project1__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <description>Name of client (project owner)</description>
    <inlineHelpText>Enter project owner/Client Name associated with the this project</inlineHelpText>
    <label>Client Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>