force-app/main/default/objects/Project1__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the project</description>
    <inlineHelpText>Choose appropriate status for the project.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requirement Discovery</fullName>
            </value>
            <value>
                <fullName>Requirement Analysis</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Quality Analysis (QA)</fullName>
            </value>
            <value>
                <fullName>User Acceptance Test (UAT)</fullName>
            </value>
            <value>
                <fullName>Production (Live)</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>