force-app/main/default/objects/Project1__c/fields/Technologies_Used__c.field-meta.xml
<CustomField>
    <fullName>Technologies_Used__c</fullName>
    <description>Comma separated technologies list that employee has used.</description>
    <inlineHelpText>comma separated technologies used. Ex. C#, ASP.Net etc</inlineHelpText>
    <label>Technologies Used</label>
    <length>52768</length>
    <type>LongTextArea</type>
</CustomField>